--- a/views/rootadmin.ejs
+++ b/views/rootadmin.ejs
@@ -22,6 +22,9 @@
 			background-color: white;
 			height: 25px;
 		}*/
+		button{
+			margin-left: 5px;
+		}
 		.yo{
 			text-align: center;
 		}
@@ -74,9 +77,12 @@
 	  </div>
 	</nav>
 	<h1 >Welcome to the Deepansh's Store</h1>
+	<br>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
-	<div class="yo"><a href="/categories"><button>View Categories</button></a>
-	<a href="/subCategories"><button>View SubCategories</button></a><a href="/subSubCategories"><button>View SubSubCategories</button></a></div>
+	<div class="yo"><a href="/categories"><button class="btn">View Categories</button></a>
+	<a href="/subCategories"><button class="btn">View SubCategories</button></a><a href="/subSubCategories"><button class="btn">View SubSubCategories</button></a></div>
+	<br>
+	<div class="yo"><a href="/complaints"><button class="btn">View complaints</button></a><a href="/requests"><button class="btn">View requests</button></a><a href="/users"><button class="btn">View Users</button></a></div>
 </body>
 </html>
 
