--- a/views/editFeature.ejs
+++ b/views/editFeature.ejs
@@ -42,7 +42,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="#">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/">DEEPANSH'S STORE</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -68,6 +68,9 @@
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/users">User-Info</a>
+	      </li>
+	      <li class="nav-item active active">
+	        <a class="nav-link" href="/payment">Commision-Rates</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
