--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -17,6 +17,24 @@
 			color: white;
 			text-decoration: underline;
 		}
+		.no{
+			display: none;
+		}
+		.removed{
+
+		}
+		#underline{
+			color: white;
+			text-decoration: underline;
+		}
+		button{
+			padding-left: 5px;
+			margin-left: 8px;
+			margin-top: 8px;
+		}
+		.deco{
+			border-radius: 5px;
+		}
 	</style>
 </head>
 <body>
@@ -71,17 +89,37 @@
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
 	<div>
 		<div class="container">
-			<form action="/newSubCategory" method="POST">
-			  <legend>CREATE NEW SUB-CATEGORY</legend>
+			<form action="/rates/<%=payment._id%>/edit?_method=PUT" method="POST">
+			  <legend>PERSONAL INFO</legend>
 			  <div class="form-group">
-			    <label for="subCategory">Name</label>
-			    <input type="text" class="form-control" id="subCategory" aria-describedby="emailHelp" placeholder="Category" name="subCategory" >
+			    <label for="category">Account ID(Paypal):</label>
+			    <input type="text" class="form-control" id="category" aria-describedby="emailHelp" placeholder="ID" name="payment[accountID]" value="<%=payment.accountID%>">
+			  </div>
+			  <h3>COMMISION RATES(in percentages):</h3>
+			  <div class="form-group">
+			    <label for="category1">Localised Visibility:</label>
+			    <input type="number" class="form-control" id="category1" aria-describedby="emailHelp" placeholder="localRate" name="payment[localRate]" value="<%=payment.localRate%>">
+			  </div>
+			  <div class="form-group">
+			    <label for="category2">Town-based Visibility:</label>
+			    <input type="number" class="form-control" id="category2" aria-describedby="emailHelp" placeholder="townRate" name="payment[townRate]" value="<%=payment.townRate%>">
+			  </div>
+			  <div class="form-group">
+			    <label for="category3">State-based Visibility:</label>
+			    <input type="number" class="form-control" id="category3" aria-describedby="emailHelp" placeholder="stateBased" name="payment[stateBased]" value="<%=payment.stateBased%>">
+			  </div>
+			  <div class="form-group">
+			    <label for="countryBased">Country-based Visibility:</label>
+			    <input type="number" class="form-control" id="countryBased" aria-describedby="emailHelp" placeholder="countryBased" name="payment[countryBased]" value="<%=payment.countryBased%>">
+			  </div>
+			  <div class="form-group">
+			    <label for="internationalBased">International Visibility:</label>
+			    <input type="number" class="form-control" id="internationalBased" aria-describedby="emailHelp" placeholder="countryBased" name="payment[internationalBased]" value="<%=payment.internationalBased%>">
 			  </div>
 			  <br>
-			  <button type="submit" class="btn btn-primary">Proceed</button>
+			  <input type="submit" class="btn btn-primary"></input>
 			</form>
 		</div>
 	</div>
 </body>
 </html>
-
