--- a/views/users.ejs
+++ b/views/users.ejs
@@ -32,7 +32,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="#">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/">DEEPANSH'S STORE</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -59,6 +59,9 @@
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/users">User-Info</a>
 	      </li>
+	      <li class="nav-item active active">
+	        <a class="nav-link" href="/payment">Commision-Rates</a>
+	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
 	    	
@@ -73,7 +76,7 @@
     	</ul>
 	  </div>
 	</nav>
-	<h3>User-Info will be available after sinking of users unit.</h3>
+	<h3> User-Info will be available after sinking of users unit.</h3>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
 </body>
 </html>
