--- a/views/rootadmin.ejs
+++ b/views/rootadmin.ejs
@@ -42,7 +42,7 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
 	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Categories <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/subCategories">SubCategories</a>
@@ -60,7 +60,7 @@
 	        <a class="nav-link" href="/complaints">Complaints</a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="/users">User-Info</a>
+	        <a class="nav-link" href="/newProduct">New product</a>
 	      </li>
 	      <li class="nav-item active active">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
@@ -82,7 +82,7 @@
 	<h1 >Welcome to the Deepansh's Store</h1>
 	<br>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
-	<div class="yo"><a href="/categories"><button class="btn">View Categories</button></a>
+	<div class="yo"><a href="/categories"><button class="btn">View Products</button></a>
 	<a href="/subCategories"><button class="btn">View SubCategories</button></a><a href="/subSubCategories"><button class="btn">View SubSubCategories</button></a></div>
 	<br>
 	<div class="yo"><a href="/complaints"><button class="btn">View complaints</button></a><a href="/requests"><button class="btn">View requests</button></a><a href="/users"><button class="btn">View Users</button></a></div>
