--- a/views/features.ejs
+++ b/views/features.ejs
@@ -39,7 +39,7 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
 	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Categories <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/subCategories">SubCategories</a>
@@ -57,7 +57,7 @@
 	        <a class="nav-link" href="/complaints">Complaints</a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="/users">User-Info</a>
+	        <a class="nav-link" href="/newProduct">New Products</a>
 	      </li>
 	      <li class="nav-item active active">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
