--- a/views/basic.ejs
+++ b/views/basic.ejs
@@ -22,6 +22,9 @@
 			background-color: white;
 			height: 25px;
 		}*/
+		button{
+			margin-left: 5px;
+		}
 		.yo{
 			text-align: center;
 		}
@@ -39,31 +42,10 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
 	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/spareroom">Spare Room <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="/subCategories">SubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/features">Features</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/requests">Requests</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/complaints">Complaints</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/newProduct">New products</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/payment">Commision-Rates</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/smtp">SMTP details</a>
+	        <a class="nav-link" href="/ratedpeople">Rated People</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
@@ -79,22 +61,12 @@
     	</ul>
 	  </div>
 	</nav>
-	<h1 >Sub-SubCategories (level-3)</h1>
+	<h1 >Welcome to the Deepansh's Store</h1>
 	<br>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
-	<div class="yo">
-		<%for(var i=1;i<=subSubCategories.length;i++){%>
-			<div>
-				<h3>
-					<%=i%>. <%=subSubCategories[i-1].name%> <a href="/subSubCategories/<%=subSubCategories[i-1]._id%>/edit"><button type="button" class="btn btn-dark">Edit</button></a> <a href="/subSubCategories/<%=subSubCategories[i-1]._id%>/delete"><button type="button" class="btn btn-danger">Delete</button></a> 
-				</h3>
-			</div>
-		<%}%>
-		<br>
-		<div>
-			<a href="/subSubCategories/new" class="btn btn-primary" role="button">Create New SubSubCategory</a>
-		</div>
+	<div class="yo"><a href="/spareroom"><button class="btn">Spare Room</button></a>
 	</div>
+	<br>
+	<div class="yo"><a href="/ratedpeople"><button class="btn">Rated People</button></a></div>
 </body>
 </html>
-
