--- a/views/question.ejs
+++ b/views/question.ejs
@@ -70,6 +70,9 @@
 	      <li class="nav-item active active">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
 	      </li>
+	      <li class="nav-item active active">
+	        <a class="nav-link" href="/smtp">SMTP details</a>
+	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
 	    	
